--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,4 @@ ehthumbs.db
 [Dd]esktop.ini
 Corridor/Library/ShaderCache/
 Corridor/Library/metadata/
+Assets/Sprites/Animations/Regular Slime.meta
